Minor tweaks in README